➕ Add tom-select

--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "dependencies": {
     "esbuild-rails": "^1.0.7",
-    "flowbite": "^2.2.1"
+    "flowbite": "^2.2.1",
+    "tom-select": "^2.3.1"
   },
   "scripts": {
     "build": "node esbuild.config.js"
