--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "dependencies": {
     "esbuild-rails": "^1.0.7",
     "flowbite": "^2.2.1",
-    "tom-select": "^2.3.1"
+    "flowbite-datepicker": "^1.2.6",
+    "slim-select": "^2.8.1"
   },
   "scripts": {
     "build": "node esbuild.config.js"
